Fixed letter-spacing again

--- a/styles/breakpoints/bases/_base_main.scss
+++ b/styles/breakpoints/bases/_base_main.scss
@@ -21,7 +21,7 @@
     margin: 0 auto;
 
     & > h1 {
-      width: 90%;
+      width: 80%;
       margin: 0 auto;
       font-size: 2em;
       font-family: $baseFontFamily;
@@ -32,7 +32,7 @@
         font-size: 2em;
         font-family: $neonFontFamily;
         display: inline-block;
-        letter-spacing: -3px;
+        letter-spacing: -6px;
       }
     }
 
